fixed layout issues across different browsers

--- a/src/App.css
+++ b/src/App.css
@@ -5,25 +5,31 @@
 } 
 
 .flex-row{
+  padding: 3px;
   color:#000000;
   width:100%;
   height: auto;
-  display: flex;
-  text-align: center;             
+  display: inline-flex;
+  text-align: center;        
 }
 
 .option-col-1{  
-  width: 145px;
-  height: 60px;  
-  margin-top: 2px;
-  top: 50%;                        
+  margin-right: 5px;
+  width: auto;
+  height: 40px;  
+  margin-top: -8px;
+  top: 30px;                        
   transform: translateY(-50%);     
   position: relative;
+  display:inline-flex;
 }
   
 .option-col-2{
-  width: 85%;
-  text-align: left;
+  width: 100%;
+  height: auto;  
+  top: 30px;                        
+  transform: translateY(-50%);     
+  position: relative;
 }
 
 .cat-col-1{
